<resources>
    <string name="app_name">HueveriaNieto</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Tools -->
    <string name="type_something">Type something</string>


    <!-- Title -->
    <string name="hueveria_nieto">Huevería Nieto</string>

    <!-- Menu's -->
    <!-- Bottom menu -->
    <string name="home_bottom_menu">Inicio</string>
    <string name="menu_bottom_menu">Menú</string>
    <string name="profile_bottom_menu">Perfil</string>
    <string name="settings_bottom_menu">Ajustes</string>
    <!-- Lateral menu -->
    <string name="open_lateral_menu">Abrir</string>
    <string name="close_lateral_menu">Cerrar</string>
    <string name="orders_lateral_menu">Pedidos y repartos</string>
    <string name="economy_lateral_menu">Economía</string>
    <string name="farm_lateral_menu">Granja</string>
    <string name="material_lateral_menu">Material</string>
    <string name="users_lateral_menu">Usuarios y clientes</string>


    <!-- Login -->
    <string name="user_text_input_layout">Usuario</string>
    <string name="password_text_input_layout">Contraseña</string>
    <string name="logo_image_description_content">Logo icon</string>
    <string name="content_description_error_icon">Error icon</string>
    <string name="login_button">Entrar</string>
    
    <!-- Roles -->
    <string name="warehouse_job">Almacén</string>
    <string name="boss_job">Jefe</string>
    <string name="delivery_job">Repartidor</string>
    <string name="office_job">Oficinista</string>
    <string name="farm_job">Personal de granja</string>

    <!-- Estados del pedido -->
    <string name="price_pending">Pendiente de precio</string>
    <string name="backordered">Pedido pendiente</string>
    <string name="in_delivery">En reparto</string>
    <string name="delivered">Entregado</string>
    <string name="delivery_attempt">Intento de entrega</string>
    <string name="unknown_status">Estado desconocido</string>
    <string name="cancelled">Cancelado</string>

    <!-- Métodos de pago -->
    <string name="in_cash">Al contado</string>
    <string name="per_receipt">Por recibo</string>
    <string name="transfer">Transferencia</string>

    <!-- Tipos de EWG -->
    <string name="electricity">Luz</string>
    <string name="water">Agua</string>
    <string name="gas">Gas</string>

</resources>
