<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- TODO: Añadir las imágenes correspondientes -->

    <item
        android:id="@+id/home_bottom_menu"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/home_bottom_menu" />
    <item
        android:id="@+id/menu_bottom_menu"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_bottom_menu" />
    <item
        android:id="@+id/profile_bottom_menu"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/profile_bottom_menu" />
    <item
        android:id="@+id/settings_bottom_menu"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/settings_bottom_menu" />

</menu>